--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "rc-util": "^5.41.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-helmet-async": "^1.3.0"
+    "react-helmet-async": "^1.3.0",
+    "react-infinite-scroll-component": "^6.1.0"
   },
   "devDependencies": {
     "@ant-design/pro-cli": "^3.3.0",
